2004-06-03  Ilja Booij  <ilja@ic-s.nl>

	* maintenance.c (main): uses MESSAGE_STATUS_ERROR from
	MessageStatus_t instead of hard-coded value.

	* db.c: all queries which use status now use values from
	MessageStatus_t instead of hard-coded values.

	* dbsearch.c: all queries which use status now use values from
	MessageStatus_t instead of hard-coded values.

	* dbmailtypes.h: struct message now hold MessageStatus_t values

	* db.c (db_set_message_status): now accepts a MessageStatus_t
	as argument instead of an int.

	* dbmail.h: added enum MessageStatus_t to hold the different
	statusses a message can have.

2004-06-02 Aaron Stone <aaron@serendipity.cx>

	* INSTALL: reflowed text to 78 columns and consolidated two
	paragraphs about LMTP vs. SMTP into one.
	* auth/authldap.c (__auth_get_config): updated GetConfigValue
	helper macro and ReadConfig calls to new function signature. 

2004-06-01  Ilja Booij  <ilja@ic-s.nl>

	* db.c (db_findmailbox_owner): now searches for a literal
	'INBOX' if we're searching for the INBOX. No longer uses 
	lower() to get the lowercase version.
	(convert_inbox_to_uppercase): function to change the first
	5 characters of the mailbox name to INBOX
	(db_begin_transaction): function used to begin a transaction
	(db_commit_transaction): function used to commit a transaction
	(db_rollback_transaction): function used to roll back a transaction
	(db_calculate_quotum_all): now also checks for correct status.

	* pop3.c (pop3): AUTH command changed slightly to give
	X-NONE-SO-USE-APOP as authentication list and return an
	error when another AUTH mechanism is asked.

2004-05-28  Ilja Booij  <ilja@ic-s.nl>

	* db.h (DBMAIL_DELIVERY_USERNAME): define moved here from pipe.c
	
	* db.c (user_idnr_is_delivery_user_idnr): new function: checks if
	the user_idnr that is given is the user_idnr of the internal
	delivery user. Uses local static variables to reduce nr of queries.
	(db_add_quotum_used): now uses user_idnr_is_delivery_user_idnr