@@ -8,6 +8,7 @@ For DBMail 2.1
 -   Put some parts of configuration into the database
 -   Increase speed by doing database optimizations (e.g., indexes)
     and removing unneeded database usage.
+-   Database transactions
 -   Report detailed delivery conditions (e.g. over quota,
     suspended account, courtesy forwarding address) via LMTP's
     enhanced status codes and via stdout messages to the MTA
