@@ -58,6 +58,15 @@ extern int pop_before_smtp;
 int pop3(void *stream, char *buffer, char *client_ip,
 	 PopSession_t * session);
 
+#ifdef __GNUC__
+int pop3_error(PopSession_t * session, void *stream,
+	       const char *formatstring, ...)
+__attribute__ ((format(printf, 3, 4)));
+#else
+int pop3_error(PopSession_t * session, void *stream,
+	       const char *formatstring, ...);
+#endif
+
 /* allowed pop3 commands */
 const char *commands[] = {
 	"quit",
@@ -273,10 +282,6 @@ int pop3_handle_connection(clientinfo_t * ci)
 	return 0;
 }
 
-
-int pop3_error(PopSession_t * session, void *stream,
-	       const char *formatstring, ...)
-    __attribute__ ((format(printf, 3, 4)));
 int pop3_error(PopSession_t * session, void *stream,
 	       const char *formatstring, ...)
 {
